<resources>
    <string name="app_name" translatable="false">ArcTouchChallenge</string>
    <string name="mi_search">Search</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="action_settings">Settings</string>
    <string name="tv_original_title_label">Original Title:</string>
    <string name="tv_release_date_label">Release:</string>
    <string name="tv_genres_label">Genres:</string>
    <string name="tv_overview_label">Overview:</string>
    <string name="loading">Loading...</string>
    <string name="tv_language_label">Original Language:</string>
    <string name="title_no_internet">No Internet Connection</string>
    <string name="message_no_internet">It looks like you\'re not connected to the Internet. Please connect and try again.</string>
    <string name="mi_reload">Reload</string>
    <string name="search_hint">Search for a movie</string>
    <string name="message_no_internet_with_cache">It looks like you\'re not connected to the Internet. Showing offline information only.</string>
    <string name="search">Search</string>
    <string name="title_failed_request">Failed to finish request</string>
    <string name="message_failed_request">It was not possible to complete your request. Please verify your connection to the Internet and try again.</string>
    <string name="title_no_results">No results found for your query</string>
    <string name="message_no_results">Please check your spelling and your network status, and try again.</string>
</resources>
